--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 DATABASE_URL="postgresql://postgres:1407@localhost:5432/supermarket?schema=public"
+
+#Secret key https://www.md5hashgenerator.com/
+JWT_SECRET=d79fe4044f96a44757bd2bfd3ef174b5
