--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
   "dependencies": {
     "@prisma/client": "^6.16.2",
     "@types/cors": "^2.8.19",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^6.16.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^3.0.0",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
